Improved logging system

--- a/src/skylines_ui/main_window.ui
+++ b/src/skylines_ui/main_window.ui
@@ -26,9 +26,9 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QGridLayout" name="gridLayout_3">
+    <item row="0" column="0">
+     <layout class="QHBoxLayout" name="central_widget_HLayout">
       <item>
        <widget class="QToolBox" name="toolBox">
         <property name="maximumSize">
@@ -50,11 +50,32 @@
           </rect>
          </property>
          <attribute name="label">
-          <string>Page 1</string>
+          <string>Weighted queries</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
-           <layout class="QGridLayout" name="gridLayout"/>
+           <layout class="QVBoxLayout" name="verticalLayout">
+            <item>
+             <widget class="QPushButton" name="pushButton">
+              <property name="text">
+               <string>Run</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
@@ -63,18 +84,15 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>100</width>
-           <height>30</height>
+           <width>300</width>
+           <height>703</height>
           </rect>
          </property>
          <attribute name="label">
-          <string>Page 2</string>
+          <string>Euclidian</string>
          </attribute>
         </widget>
        </widget>
-      </item>
-      <item>
-       <widget class="QOpenGLWidget" name="openGLWidget"/>
       </item>
      </layout>
     </item>
