--- a/src/skylines_ui/main_window.ui
+++ b/src/skylines_ui/main_window.ui
@@ -126,9 +126,9 @@
            </layout>
           </item>
           <item row="4" column="0">
-           <widget class="QPushButton" name="clear_input_points_PB2">
+           <widget class="QPushButton" name="clear_PB2">
             <property name="text">
-             <string>Clear input points</string>
+             <string>Clear</string>
             </property>
            </widget>
           </item>
@@ -139,8 +139,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>300</width>
-           <height>970</height>
+           <width>98</width>
+           <height>28</height>
           </rect>
          </property>
          <attribute name="label">
