--- a/src/skylines_ui/main_window.ui
+++ b/src/skylines_ui/main_window.ui
@@ -59,7 +59,7 @@
           <string>Weighted queries</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0">
+          <item row="1" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
              <spacer name="horizontalSpacer">
@@ -123,35 +123,28 @@
             </item>
            </layout>
           </item>
-          <item row="5" column="0">
+          <item row="6" column="0">
            <widget class="QPushButton" name="load_input_points_PB">
             <property name="text">
              <string>Load input points from file</string>
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
+          <item row="5" column="0">
            <widget class="QPushButton" name="serialize_input_points_PB">
             <property name="text">
              <string>Serialize input points to file</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="4" column="0">
            <widget class="QPushButton" name="pushButton">
             <property name="text">
              <string>Run</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="0">
-           <widget class="QPushButton" name="clear_PB2">
-            <property name="text">
-             <string>Clear</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0">
+          <item row="8" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout_4">
             <item>
              <widget class="QRadioButton" name="radioButton_Move">
@@ -172,18 +165,33 @@
             </item>
            </layout>
           </item>
-          <item row="8" column="0">
-           <spacer name="verticalSpacer">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="7" column="0">
+           <widget class="QPushButton" name="clear_PB2">
+            <property name="text">
+             <string>Clear</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
+           </widget>
+          </item>
+          <item row="10" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Points</string>
             </property>
-           </spacer>
+           </widget>
+          </item>
+          <item row="11" column="0">
+           <widget class="QListWidget" name="listWidget_points">
+            <property name="selectionMode">
+             <enum>QAbstractItemView::MultiSelection</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="0">
+           <widget class="QPushButton" name="pushButton_drawBisector">
+            <property name="text">
+             <string>Draw bisector</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
