--- a/src/skylines_ui/main_window/main_window.ui
+++ b/src/skylines_ui/main_window/main_window.ui
@@ -200,6 +200,13 @@
               </widget>
              </item>
              <item>
+              <widget class="QPushButton" name="pushButton_MTS">
+               <property name="text">
+                <string>Multithread sorted</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QPushButton" name="pushButton_GPUBF">
                <property name="text">
                 <string>GPU brute force</string>
@@ -253,8 +260,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>100</width>
-           <height>30</height>
+           <width>98</width>
+           <height>28</height>
           </rect>
          </property>
          <attribute name="label">
